<?xml version="1.0"?>
<package format="2">
  <name>patchworkpp</name>
  <version>0.0.0</version>
  <description>patchwork++ package</description>

  <maintainer email="sj98lee@kaist.ac.kr">Seungjae Lee</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <build_depend>libpcl-all-dev</build_depend>

  <exec_depend>libpcl-all</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <depend>rclcpp</depend>
    <depend>sensor_msgs</depend>
    <depend>pcl_conversions</depend>
  </export>
</package>
